Fix with String translation